# Solutionist

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  agent.md  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  django-ci.yml  lint.yml  test.yml
comments/: admin.py  forms.py  models.py  tests.py  update_content_html.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_content_html.py
core/: urls.py  views.py
fixtures/: users.json
notifications/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
notifications/migrations/: 0001_initial.py
notifications/templatetags/: __init__.py  notification_tags.py
solutionist/: asgi.py  settings.py  urls.py  wsgi.py
solutions/: admin.py  ai_services.py  forms.py  models.py  ratings.py  ratings_views.py  tests.py  tests_ratings.py  tests_search.py  urls.py  views.py
solutions/management/commands/: generate_summaries.py
solutions/migrations/: 0001_initial.py  0002_rating.py  0003_solution_summary.py
static/css/: custom.css
static/js/: notifications.js
tags/: admin.py  models.py  tests.py  urls.py  views.py
tags/migrations/: 0001_initial.py
templates/: base.html  home.html
templates/comments/: comment.html  comments_section.html
templates/docs/: mcp_integration.html
templates/errors/: 404.html  500.html
templates/notifications/: notification_list.html
templates/solutions/: solution_compare.html  solution_confirm_delete.html  solution_detail.html  solution_form.html  solution_history.html  solution_list.html  solution_version.html
templates/solutions/includes/: rating_component.html
templates/tags/: tag_detail.html  tag_list.html
templates/users/: account_delete.html  login.html  mcp_tokens.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  profile.html  register.html  settings.html  user_profile.html
users/: admin.py  forms.py  mcp.py  mcp_api.py  models.py  tests.py  urls.py  views.py
users/management/commands/: create_mcp_token.py
users/migrations/: 0001_initial.py  0002_mcptoken.py  0003_usersettings.py
